Add APIs to list all post types, languages and locations
- All post types and languages are available to all customers for now
- Locations are customer-specific
- Validate post language while creating or updating a post
- Add filter to the list posts API, but it's not used yet
