# apis/api.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: Canvara Backend API
-  version: 0.1.3
+  version: 0.2.0
 servers: []
 tags:
   - name: applications
@@ -165,6 +165,23 @@ paths:
       operationId: list_posts
       security:
         - AWSCognitoCanvaraPrototype: []
+      parameters:
+        - schema:
+            type: string
+          in: query
+          name: post_owner_id
+          description: Unique identifier of the post owner
+        - schema:
+            type: string
+          in: query
+          name: q
+          description: The search query
+        - schema:
+            type: string
+            default: curated
+          in: query
+          name: filter
+          description: Filter for the results
     post:
       summary: Add a new post
       tags:
@@ -612,6 +629,57 @@ paths:
           in: query
           name: q
           description: The search query
+  /post_types:
+    get:
+      summary: List all post types available to user
+      tags:
+        - posts
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/PostType'
+      operationId: list_post_types
+      security:
+        - AWSCognitoCanvaraPrototype: []
+  /locations:
+    get:
+      summary: List all post locations available to user
+      tags:
+        - posts
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Location'
+      operationId: list_locations
+      security:
+        - AWSCognitoCanvaraPrototype: []
+  /languages:
+    get:
+      summary: List all post languages available to user
+      tags:
+        - posts
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+      operationId: list_languages
+      security:
+        - AWSCognitoCanvaraPrototype: []
 components:
   schemas:
     Customer:
